Changelog for Babel.

Babel 2.1.1-rc1
==============
- Added &resourceId parameter to BabelLinks snippet.
- Added French translation for new keys from version 2.1.0-beta.

Babel 2.1.0-beta
==============
- Added Frech translation: Thanks to Romain <romain@meltingmedia.net>
- New Babel-Box:
  - A chunk is used to generate the language links (mgr/babelBoxItem).
  - Changed CSS.
  - Added JavaScript (for the langauge layers, see below).
  - All languages (contexts) of current group are displayed even if there are no links defined.
  - If there is no link to a language it's background is light gray.
  - When mouseovering a language link a layer is displayed where you can
	- create a translation (new resource) if no link is defined.
  	- manually link the translation to an existing resource if no link is defined.
  	- remove a link if a link is defined.
  - Added validation to keep the babel TV clear
  - Added several keys to the lexicon: French translation still pending.

Babel 2.0.0-beta
==============
- Total reengineering of the whole extra (code structure and logic, too).
  => NOT BACKWARD COMPATIBLE to older versions.
- Fixed issue with primary key validation errors when linking the Babel TV to templates
- Added build script
- Added multilanguage support for the extra itself
- Easier but more powerfull configuration:
	No need to specify names/caption of context anymore (caption is derived from the contexts' cultureKey).
	3 system settings which can be set during package installation.
	* babel.contextKeys:
		Define which context should be used to link translation.
		Defining several groups of context is supported, too (see readme.txt).
	* babel.babelTvName:
		Name of TV in which links between translated resources are keept.
	* babel.syncTvs:
		IDs of TVs which should be synchronized by Babel.
- Moved CSS into asset folder
- Moved codebase to https://github.com/mikrobi/babel/