@@ -8,5 +8,11 @@
  * @subpackage lexicon
  */
 
-$_lang['babel.tpl_desc'] = 'Chunk zur Darstellung eines Sprach-Links';
-$_lang['babel.activeCls_desc'] = 'CSS-Klasse für den Sprach-Link der aktiven Sprache';
+/* BabelLinks snippet */
+$_lang['babellinks.tpl'] = 'Chunk zur Darstellung eines Sprach-Links';
+$_lang['babellinks.activeCls'] = 'CSS-Klasse für den Sprach-Link der aktiven Sprache';
+$_lang['babellinks.resourceId'] = 'Id der Ressource, von der die Links zu Übersetzungen dargestellt werden sollen';
+
+/* BabelTranslation snippet */
+$_lang['babeltranslation.resourceId'] = 'ID der Ressource, von der eine Übersetzung ermittelt werden soll';
+$_lang['babeltranslation.contextKey'] = 'Schlüssel des Kontexts, in dem eine Übersetzung ermittelt werden soll';
