@@ -8,5 +8,11 @@
  * @subpackage lexicon
  */
 
-$_lang['babel.tpl_desc'] = 'Chunk to display a language link';
-$_lang['babel.activeCls_desc'] = 'CSS class for the active language link';
+/* BabelLinks snippet */
+$_lang['babellinks.tpl'] = 'Chunk to display a language link';
+$_lang['babellinks.activeCls'] = 'CSS class for the active language link';
+$_lang['babellinks.resourceId'] = 'Id of resource of which links to translations should be displayed';
+
+/* BabelTranslation snippet */
+$_lang['babeltranslation.resourceId'] = 'ID of resource of which a translated resource should be determined';
+$_lang['babeltranslation.contextKey'] = 'Key of context in which translated resource should be determined';
