@@ -8,5 +8,11 @@
  * @subpackage lexicon
  */
 
-$_lang['babel.tpl_desc'] = 'Chunk pour afficher un lien de langue';
-$_lang['babel.activeCls_desc'] = 'Classe CSS pour les liens de la langue active';
+/* BabelLinks snippet */
+$_lang['babellinks.tpl'] = 'Chunk pour afficher un lien de langue';
+$_lang['babellinks.activeCls'] = 'Classe CSS pour les liens de la langue active';
+$_lang['babellinks.resourceId'] = 'Id of resource of which links to translations should be displayed';
+
+/* BabelTranslation snippet */
+$_lang['babeltranslation.resourceId'] = 'ID of resource of which a translated resource should be determined';
+$_lang['babeltranslation.contextKey'] = 'Key of context in which translated resource should be determined';
